<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/registration"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:textSize="60dp"
        android:textColor="@color/colorMaroon"
         />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/textView"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorMaroon"
        android:textCursorDrawable="@color/colorMaroon"/>

    <EditText
        android:id="@+id/secondNameText"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/nameText"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorMaroon"
        android:textCursorDrawable="@color/colorMaroon"/>

    <EditText
        android:id="@+id/fatherNameText"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/secondNameText"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/patronymic"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorMaroon"
        android:textCursorDrawable="@color/colorMaroon"/>

    <EditText
        android:id="@+id/emailTextRegister"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/fatherNameText"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/colorMaroon"
        android:textCursorDrawable="@color/colorMaroon"/>

    <EditText
        android:id="@+id/passwordTextRegister"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerInParent="true"
        android:layout_below="@id/emailTextRegister"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorMaroon"
        android:textCursorDrawable="@color/colorMaroon"/>

    <EditText
        android:id="@+id/passwordTextRegister2"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerInParent="true"
        android:layout_below="@id/passwordTextRegister"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorMaroon"
        android:textCursorDrawable="@color/colorMaroon" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_below="@id/passwordTextRegister2"
        android:background="@drawable/buttonsignup"/>
</RelativeLayout>